[project]
name = "timeseriesimputation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "dvc>=3.63.0",
    "dvc-gs>=3.0.2",
    "dvc-ssh>=4.2.2",
    "dvclive>=3.49.0",
    "imputegap>=1.1.1",
    "jupyter>=1.1.1",
    "missingno>=0.5.2",
    "numpy>=1.26.4",
    "optuna>=3.0.0",
    "panda>=0.3.1",
    "pandas>=2.0.3",
    "polars>=1.34.0",
    "pygrinder>=0.6.0",
    "pypots>=1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.3.2",
    "tensorboard>=2.16.2",
    "tensorrt>=10.13.3.9",
    "xgboost>=2.1.4",
]
